@@ -12,10 +12,10 @@
   *  or post your suggestion as an enhancement request to the project bug tracker.
   *
   *  <b>Targeted for This Release (SVN Development Only):</b>
-  *  - N/A
+  *  - Add hub support to match Atmel's stack
+  *  - Add ability to get number of bytes not written with pipe/endpoint write routines after an error
   *
   *  <b>Targeted for Future Releases:</b>
-  *  - Add hub support to match Atmel's stack
   *  - Add standardized descriptor names to device and host class driver structures
   *  - Remake AVRStudio project files
   *  - Add detailed overviews of how each demo works
